--- a/demos/demos_natural_const_discovery/demo_classical_gravity/demo_classical_gravity.ipynb
+++ b/demos/demos_natural_const_discovery/demo_classical_gravity/demo_classical_gravity.ipynb
@@ -4223,7 +4223,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "automl",
    "language": "python",
    "name": "python3"
   },
@@ -4237,7 +4237,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.18"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "5c7da14dc2435725c56c36d489a9a6a7d1cbb4e918cdbd070d8673fd7a6695a5"
+   }
   }
  },
  "nbformat": 4,
