--- a/demos/demos_sr/demo_mechanical_energy/demo_mechanical_energy.ipynb
+++ b/demos/demos_sr/demo_mechanical_energy/demo_mechanical_energy.ipynb
@@ -1619,7 +1619,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "mlflow-4353a5db5c24b60d97dcdd4e9ff7ae0e440ce7f7",
    "language": "python",
    "name": "python3"
   },
@@ -1633,7 +1633,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.9.17"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "d807baa0db5622c69b73dd0d16cb01e4b1ac3db2c18ca182560cb952a36ccba2"
+   }
   }
  },
  "nbformat": 4,
